--- a/musaeid-frontend/package.json
+++ b/musaeid-frontend/package.json
@@ -3,14 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/node": "^16.18.103",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.2",
+    "commonmark": "^0.31.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "ts-jest": "^29.2.3",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,11 +42,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/commonmark": "^0.27.9",
     "@types/eslint__eslintrc": "^2.1.2",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.103",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -56,6 +60,10 @@
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.8.0",
     "jest": "^29.7.0",
-    "prettier": "^3.3.3"
+    "postcss": "^8.4.40",
+    "prettier": "^3.3.3",
+    "react-router-dom": "^6.25.1",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^4.9.5"
   }
 }
